Change debug logs to info level